@@ -21,7 +21,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine} ${jetty.surefire.argLine} --add-reads org.eclipse.jetty.server=org.eclipse.jetty.logging --add-opens org.eclipse.jetty.server/org.eclipse.jetty.server=ALL-UNNAMED
+            @{argLine} ${jetty.surefire.argLine}
+            --add-reads org.eclipse.jetty.server=org.eclipse.jetty.logging
+            --add-reads org.eclipse.jetty.server=java.xml
           </argLine>
         </configuration>
       </plugin>
